--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "VC Music Player Vr4",
-  "description": "An Telegram Bot Maded By Achu to Play Nonstop Radio/Music in Telegram Voice Chats",
-  "repository": "https://github.com/Yeagerist-Music-Streamer-Bot-V3/VCMusicPlayerVr4.0",
+  "description": "An Telegram Bot Maded By basil to Play Nonstop Radio/Music in Telegram Voice Chats",
+  "repository": "https://github.com/dmxbasil/DMX---music-bot-v3",
   "logo": "https://telegra.ph/file/a247cefef0c9fd6308ee2.jpg",
   "keywords": [
     "telegram",
